--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
-body {
-  padding: 20px;
-}
-
 .App {
+  max-width: 500px;
+  width: 100%;
   margin: 0 auto;
-  width: 500px;
-}
-
-.App > section {
+  box-sixing: border-box;
   padding: 20px;
-  background: rgb(245, 245, 245);
-  border: 1px solid rgb(240, 240, 240);
-  border-radius: 5px;
-  margin-bottom: 10px;
+  /* border: 1px solid gray; */
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
